[package]
name = "cult_of_eat"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_rapier3d =  { version = "0.23.0", features = [ "simd-stable", "debug-render-3d" ] }
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
