[package]
name = "cult_of_eat"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_xpbd_3d = "0.3.2"
rand = "0.8.5"
smooth-bevy-cameras = "0.10.0"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
